# djangodemo

./: .gitignore  docker-compose.yml  pyproject.toml
djangodemo/: settings.py  urls.py  views.py
