[project]
name = "django-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Frank Steinberg",email = "7845126+franksteinberg@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "ruff (>=0.12.9,<0.13.0)"
]

[tool.poetry]
packages = [{include = "django_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
