[project]
name = "django-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Frank Steinberg",email = "7845126+franksteinberg@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "django_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg = "^3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
